@@ -8788,6 +8788,30 @@ part parent "m328"
 ;
 
 #------------------------------------------------------------
+# ATmega64m1
+#------------------------------------------------------------
+
+part parent "m328"
+    id              = "m64m1";
+    desc            = "ATmega64M1";
+    # stk500_devcode	= 0x;
+    # avr910_devcode	= 0x;
+    signature       = 0x1e 0x96 0x84;
+    bs2             = 0xe2;
+
+    memory "efuse"
+        size            = 1;
+        min_write_delay = 4500;
+        max_write_delay = 4500;
+        read            = "0 1 0 1 0 0 0 0 0 0 0 0 1 0 0 0",
+                          "x x x x x x x x o o o o o o o o";
+        
+        write           = "1 0 1 0 1 1 0 0 1 0 1 0 0 1 0 0",
+                          "x x x x x x x x x x i i i i i i";
+    ;
+;
+
+#------------------------------------------------------------
 # ATtiny2313
 #------------------------------------------------------------
 
